// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useLocalStorage should render the data and re-render when updated 1`] = `
<div>
  <h1>
    {
  "a": 1
}
  </h1>
  <button
    type="button"
  >
    Update
  </button>
</div>
`;

exports[`useLocalStorage should render the data and re-render when updated 2`] = `
<div>
  <h1>
    {
  "b": 2
}
  </h1>
  <button
    type="button"
  >
    Update
  </button>
</div>
`;
